--- a/config/crd/bases/integreatly.org_rhmis.yaml
+++ b/config/crd/bases/integreatly.org_rhmis.yaml
@@ -113,6 +113,8 @@ spec:
                 type: string
               preflightStatus:
                 type: string
+              sku:
+                type: string
               smtpEnabled:
                 type: boolean
               stage:
@@ -156,6 +158,8 @@ spec:
                   of cluster Important: Run "make" to regenerate code after modifying
                   this file'
                 type: object
+              toSKU:
+                type: string
               toVersion:
                 type: string
               version:
