--- a/config/secrets/sku-secret.yaml
+++ b/config/secrets/sku-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
-  name: rhmi-s3-bucket
+  name: sku-secret
 objects:
   - apiVersion: v1
     kind: Secret
