update sku secret param name to add-managed-api-service update sku configure function to allow for multiple containers update sku configure function to return immediately when isupdated is false udpate rate limit deployment reconcile to use configure fuction including update to not overwrite replicas/resources in the case of no sku change event update getsku logic to allow for sku change during a pre-existing sku change that has not fully completed return error if no secret param is found as this will become required by the add-on, dev default is handled by make cluster/prepare/sku

--- a/config/configmap/sku-config.yaml
+++ b/config/configmap/sku-config.yaml
@@ -64,6 +64,19 @@ data:
                               "memory": 1500
                           }
                       }
+                  },
+                "ratelimit": {
+                      "replicas": 3,
+                      "resources": {
+                          "requests": {
+                              "cpu": 0.10,
+                              "memory": 50
+                          },
+                          "limits": {
+                              "cpu": 0.20,
+                              "memory": 100
+                          }
+                      }
                   }
               }
           },
@@ -126,6 +139,19 @@ data:
                           "memory": 1500
                       }
                   }
+              },
+              "ratelimit": {
+                  "replicas": 3,
+                  "resources": {
+                      "requests": {
+                          "cpu": 0.05,
+                          "memory": 50
+                      },
+                      "limits": {
+                          "cpu": 0.15,
+                          "memory": 100
+                      }
+                  }
               }
           }
       },
@@ -186,6 +212,19 @@ data:
                       "limits": {
                           "cpu": 0.75,
                           "memory": 1500
+                      }
+                  }
+              },
+              "ratelimit": {
+                  "replicas": 1,
+                  "resources": {
+                      "requests": {
+                          "cpu": 0.05,
+                          "memory": 50
+                      },
+                      "limits": {
+                          "cpu": 0.15,
+                          "memory": 100
                       }
                   }
               }
