--- a/config/secrets/sku-secret.yaml
+++ b/config/secrets/sku-secret.yaml
@@ -8,7 +8,7 @@ objects:
     metadata:
       name: addon-managed-api-service-parameters
     stringData:
-      sku: ${SKU}
+      add-managed-api-service: ${SKU}
 parameters:
   - name: SKU
     value: ""
