Moving operator to use go version 1.16.2

--- a/Dockerfile.osde2e
+++ b/Dockerfile.osde2e
@@ -1,19 +1,22 @@
-FROM registry.ci.openshift.org/openshift/release:golang-1.13 AS builder
+FROM registry.ci.openshift.org/openshift/release:golang-1.16 AS builder
 
 ENV PKG=/go/src/github.com/integr8ly/integreatly-operator/
 WORKDIR ${PKG}
 
 # compile test binary
+COPY go.mod go.mod
+COPY go.sum go.sum
+COPY vendor ./vendor
 COPY make ./make
 COPY apis/ apis/
 COPY apis-products/ apis-products/
 COPY controllers/ controllers/
 COPY pkg ./pkg
-COPY vendor ./vendor
 COPY test ./test
 COPY manifests ./manifests
 COPY version ./version
 COPY Makefile ./
+COPY manifests/ ./manifests
 RUN make test/compile/osde2e
 
 FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
