--- a/Dockerfile.functional
+++ b/Dockerfile.functional
@@ -1,15 +1,17 @@
-FROM registry.ci.openshift.org/openshift/release:golang-1.13 AS builder
+FROM registry.ci.openshift.org/openshift/release:golang-1.16 AS builder
 
 ENV PKG=/go/src/github.com/integr8ly/integreatly-operator/
 WORKDIR ${PKG}
 
 # compile test binary
+COPY go.mod go.mod
+COPY go.sum go.sum
+COPY vendor ./vendor
 COPY make ./make
 COPY apis/ apis/
 COPY apis-products/ apis-products/
 COPY controllers/ controllers/
 COPY pkg ./pkg
-COPY vendor ./vendor
 COPY test ./test
 COPY Makefile ./
 COPY manifests/ ./manifests
