--- a/config/secrets/sku-secret.yaml
+++ b/config/secrets/sku-secret.yaml
@@ -8,7 +8,7 @@ objects:
     metadata:
       name: addon-managed-api-service-parameters
     stringData:
-      add-managed-api-service: ${SKU}
+      addon-managed-api-service: ${QUOTA}
 parameters:
-  - name: SKU
-    value: ""
+  - name: QUOTA
+    value: "1"
