update rate limiting values so they are parsed correctly

--- a/config/configmap/sku-config.yaml
+++ b/config/configmap/sku-config.yaml
@@ -68,14 +68,16 @@ data:
                 "ratelimit": {
                       "replicas": 3,
                       "resources": {
-                          "requests": {
-                              "cpu": 0.10,
-                              "memory": 50
-                          },
-                          "limits": {
-                              "cpu": 0.20,
-                              "memory": 100
-                          }
+                          "resources": {
+                             "requests": {
+                                 "cpu": "100m",
+                                 "memory": "50Mi"
+                             },
+                             "limits": {
+                                 "cpu": "200m",
+                                 "memory": "100Mi"
+                             }
+                         }
                       }
                   }
               }
@@ -144,12 +146,12 @@ data:
                   "replicas": 3,
                   "resources": {
                       "requests": {
-                          "cpu": 0.05,
-                          "memory": 50
+                          "cpu": "50m",
+                          "memory": "50Mi"
                       },
                       "limits": {
-                          "cpu": 0.15,
-                          "memory": 100
+                          "cpu": "150m",
+                          "memory": "100Mi"
                       }
                   }
               }
@@ -218,15 +220,15 @@ data:
               "ratelimit": {
                   "replicas": 1,
                   "resources": {
-                      "requests": {
-                          "cpu": 0.05,
-                          "memory": 50
-                      },
-                      "limits": {
-                          "cpu": 0.15,
-                          "memory": 100
-                      }
-                  }
+                     "requests": {
+                         "cpu": "50m",
+                         "memory": "50Mi"
+                     },
+                     "limits": {
+                         "cpu": "150m",
+                         "memory": "100Mi"
+                     }
+                 }
               }
           }
       }]
