Added active_sku metric
The active_sku metric reports the current sku configuration.
It also holds toSKU  which is set when the sku config is
being changed.

Added metric annotation in grafana dashboards

Changed metric naming convention to be closer to rhmi_version metric

update grafana dashboard to only contain the hard limit
remove soft limit from dashboard
remove soft limit alerts from prometheus
update envoy configmap based on skuconfig

update unit tests

Metric is now set when sku is first processed

Renamed metric to rhoam_sku

fix in the logic which was causing cr to not be udpated

--- a/config/configmap/sku-config.yaml
+++ b/config/configmap/sku-config.yaml
@@ -9,8 +9,7 @@ data:
               "name": "20",
               "rate-limiting": {
                   "unit": "minute",
-                  "requests_per_unit": 1389,
-                  "alert_limits": []
+                  "requests_per_unit": 1389
               },
               "resources": {
                   "backend_listener": {
@@ -79,15 +78,27 @@ data:
                              }
                          }
                       }
-                  }
+                  },
+                 "grafana": {
+                       "replicas": 1,
+                     "resources": {
+                         "requests": {
+                             "cpu": 0.05,
+                             "memory": 50
+                         },
+                         "limits": {
+                             "cpu": 0.15,
+                             "memory": 100
+                         }
+                     }
+                   }
               }
           },
        {
           "name": "5",
           "rate-limiting": {
               "unit": "minute",
-              "requests_per_unit": 347,
-              "alert_limits": []
+              "requests_per_unit": 347
           },
           "resources": {
               "backend_listener": {
@@ -154,6 +165,19 @@ data:
                            "memory": 100
                        }
                    }
+              },
+             "grafana": {
+                       "replicas": 1,
+                     "resources": {
+                         "requests": {
+                             "cpu": 0.05,
+                             "memory": 50
+                         },
+                         "limits": {
+                             "cpu": 0.15,
+                             "memory": 100
+                         }
+                     }
               }
           }
       },
@@ -161,8 +185,7 @@ data:
           "name": "1",
           "rate-limiting": {
               "unit": "minute",
-              "requests_per_unit": 20,
-              "alert_limits": []
+              "requests_per_unit": 12
           },
           "resources": {
               "backend_listener": {
@@ -229,6 +252,19 @@ data:
                         "memory": 100
                     }
                 }
-              }
+              },
+               "grafana": {
+                     "replicas": 1,
+                   "resources": {
+                       "requests": {
+                           "cpu": 0.05,
+                           "memory": 50
+                       },
+                       "limits": {
+                           "cpu": 0.15,
+                           "memory": 100
+                       }
+                   }
+                }
           }
       }]
