reconsile SKU in 3scale
modify sku_tes.go to cover 3scale

Co-authored-by: makslion <mvavilov@redhat.com>

update reconcile unit test

update 3scale version

--- a/products/products.yaml
+++ b/products/products.yaml
@@ -1,6 +1,6 @@
 products:
   - name: 3scale-operator
-    version: 3scale-2.10.0-CR2
+    version: 3scale-2.10.0-GA
     url: "https://github.com/3scale/3scale-operator"
     installType: "rhmi/rhoam"
   - name: apicurito-registry-operator
