--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/integreatly/integreatly-operator
-  newTag: master
+  newName: quay.io/jackdelahunt/managed-api-service
+  newTag: v1231
