H03 & H07 test - wait for dedicated admin user to become 3scale admin

--- a/Dockerfile.osde2e
+++ b/Dockerfile.osde2e
@@ -11,6 +11,8 @@ COPY controllers/ controllers/
 COPY pkg ./pkg
 COPY vendor ./vendor
 COPY test ./test
+COPY manifests ./manifests
+COPY version ./version
 COPY Makefile ./
 RUN make test/compile/osde2e
 
