--- a/Dockerfile.functional
+++ b/Dockerfile.functional
@@ -14,6 +14,7 @@ COPY test ./test
 COPY Makefile ./
 COPY manifests/ ./manifests
 COPY products ./products
+COPY version ./version
 
 RUN make test/compile/functional
 
