replacing the replaces

--- a/packagemanifests/managed-api-service/1.5.0/managed-api-service.clusterserviceversion.yaml
+++ b/packagemanifests/managed-api-service/1.5.0/managed-api-service.clusterserviceversion.yaml
@@ -623,6 +623,7 @@ spec:
   maturity: alpha
   provider:
     name: rhoam
+  replaces: managed-api-service.v1.4.0
   selector:
     matchLabels:
       alm-owner-rhoam: rhoam-operator
