Renamed all instances of "sku" to "quota"
Fix: Renamed AProductConfig to QuotaProductConfig

The implementation of ProductConfig used Quota was called
AProductConfig, this has been renamed to QuotaProductConfig

Renamed quota-config to quota-config-managed-api-service

--- a/config/secrets/quota-secret.yaml
+++ b/config/secrets/quota-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
-  name: sku-secret
+  name: quota-secret
 objects:
   - apiVersion: v1
     kind: Secret
