--- a/config/crd/bases/integreatly.org_rhmis.yaml
+++ b/config/crd/bases/integreatly.org_rhmis.yaml
@@ -113,7 +113,7 @@ spec:
                 type: string
               preflightStatus:
                 type: string
-              sku:
+              quota:
                 type: string
               smtpEnabled:
                 type: boolean
@@ -158,7 +158,7 @@ spec:
                   of cluster Important: Run "make" to regenerate code after modifying
                   this file'
                 type: object
-              toSKU:
+              toQuota:
                 type: string
               toVersion:
                 type: string
