Renamed all instances of "sku" to "quota"

--- a/config/configmap/quota-config.yaml
+++ b/config/configmap/quota-config.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: sku-config
+  name: quota-config
 data:
-  sku-configs: |-
+  quota-configs: |-
     [        
         {
             "name": "50",
