--- a/Dockerfile.osde2e
+++ b/Dockerfile.osde2e
@@ -14,6 +14,8 @@ COPY test ./test
 COPY manifests ./manifests
 COPY version ./version
 COPY Makefile ./
+COPY version ./version
+
 RUN make test/compile/osde2e
 
 FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
